Update css to ensure the menu not cut off for long list (#2532)

--- a/src/modules/banking/bankingRule/components/AllocationTable.module.css
+++ b/src/modules/banking/bankingRule/components/AllocationTable.module.css
@@ -6,6 +6,6 @@
   flex: 1 1;
 }
 
-.totals {
+.totals :global(.line-item__total) {
   min-height: 14rem;
 }
