--- a/src/modules/bankingRules/bankingRuleDetail/components/BankingRuleDetailView.module.css
+++ b/src/modules/bankingRules/bankingRuleDetail/components/BankingRuleDetailView.module.css
@@ -14,6 +14,6 @@
   color: var(--flx-color-alert-error-link);
 }
 
-.totals {
+.totals :global(.line-item__total) {
   min-height: 14rem;
 }
